# zwift-overlay

./: Cargo.toml  Info.plist  LICENSE  README.md  build-macos.sh  build.rs
.github/workflows/: build.yml
scripts/: generate_app_icon.swift
src/: data_source.rs  log_watcher.rs  main.rs  metrics.rs  overlay.rs
