[package]
name = "zwift_overlay"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
tokio = { version = "1", features = ["full"] }
btleplug = "0.11"
uuid = "1"
futures-util = "0.3"

[package.metadata.bundle]
name = "Zwift Power Overlay"
identifier = "com.zwiftoverlay.app"
category = "public.app-category.sports"
icon = ["assets/app.iconset/*.png"]
